Implement Issue #574 Replace Cls/SgsChangeListener.authorizeChange() by a vetoable event